# amir-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Me_at_the_zoo.f278.webm  README.md  REFACTORING_SUMMARY.md  SEGMENTATION_CONFIG_IMPLEMENTATION.md  VERTICAL_VIDEO_SUBTITLE_ANALYSIS.md  VERTICAL_VIDEO_SUBTITLE_OPTIMIZATION_ANALYSIS.md  VERTICAL_VIDEO_SUBTITLE_OPTIMIZATION_CHANGELOG.md  VERTICAL_VIDEO_SUBTITLE_QUICK_REFERENCE.md  amir  colab_setup.ipynb  config.yaml  install.sh  main.py  pyproject.toml  requirements-ml.txt  requirements.txt  requirements_backup.txt  setup_env.py  video.sh
lib/python/subtitle/: .config.example  .gitignore  .style.toml  LICENSE  README.md  __init__.py  __main__.py  amir-cli.code-workspace  check_mlx.py  cli.py  exporter.py  main.py  processor.py  processor_backup.py  processor_backup_v2.py  pyproject.toml  pytest.ini  quality.py  whisper_server.py
lib/python/subtitle/cache/: __init__.py  checkpoint.py  helpers.py
lib/python/subtitle/concurrency/: __init__.py  locks.py
lib/python/subtitle/config/: __init__.py  api_key.py  language.py  segmentation.py
lib/python/subtitle/io/: __init__.py  duration.py  media_io.py  srt_parser.py  srt_time.py
lib/python/subtitle/models/: __init__.py  types.py
lib/python/subtitle/rendering/: __init__.py  ass_helpers.py
lib/python/subtitle/sanitization/: __init__.py  helpers.py
lib/python/subtitle/segmentation/: __init__.py  helpers.py
lib/python/subtitle/social/: __init__.py  discovery.py  generator.py  metadata.py  post_helpers.py  prompts.py
lib/python/subtitle/tests/: README.md  __init__.py  conftest.py  test_pipeline_refactoring.py  test_post.py  test_translation_postfix.py  test_workflow_base.py  test_workflow_finalize.py  test_workflow_integration.py  test_workflow_rendering.py  (+3 more)
(+172 files in other folders)
