[project]
name = "amir-cli"
version = "0.1.0"
description = "Amir CLI - A powerful video compression and utility tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "arabic-reshaper>=3.0.0",
    "av>=16.1.0",
    "configparser>=7.2.0",
    "faster-whisper>=1.2.1 ; platform_machine != 'arm64' or sys_platform != 'darwin'",
    "google-genai>=1.64.0",
    "huggingface-hub>=1.4.1",
    "litellm>=1.81.15",
    "markdown2>=2.5.4",
    "mlx>=0.30.6 ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "mlx-whisper>=0.4.3 ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "onnxruntime>=1.24.2",
    "openai>=2.24.0",
    "pillow>=12.1.1",
    "protobuf>=6.33.5",
    "pyannote-audio>=4.0.4 ; sys_platform != 'linux' or platform_machine == 'x86_64'",
    "python-bidi>=0.6.7",
    "python-dotenv>=1.2.1",
    "sentencepiece>=0.2.1",
    "static-ffmpeg>=3.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "weasyprint>=68.1",
]

[tool.uv]
package = false

[build-system]
# ...
requires = ["hatchling"]
build-backend = "hatchling.build"
