[project]
name = "subtitle"
version = "1.0.0"
description = "Multi-Language Video Subtitle Generator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "faster-whisper>=1.0.0",
    "av>=12.0.0,!=11.0.0",
    "openai>=1.0.0",
    "configparser>=5.0.0",
    "static-ffmpeg>=3.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2",
    "tqdm>=4.65.0",
    "mlx-whisper>=0.4.3",
    "mlx>=0.18.1",
    "pyannote.audio>=3.1.1",
]

[project.scripts]
subtitle-cli = "subtitle.cli:main"
